# sc2-discord-bot

./: .gitignore  README.md  env-sample  log_monitor.py  requirements.txt  run_match.py  test_log_monitor.py
sc2_bootstrap_discord/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
sc2_bootstrap_discord/examples/: basic_bot.py
sc2_bootstrap_discord/src/sc2_bootstrap_discord/: __init__.py  cli.py  log_monitor.py  sc2_runner.py
sc2_bootstrap_discord/tests/: __init__.py  test_log_monitor.py
